--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@mui/material": "^5.2.1",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-transition-group": "^4.4.2"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
